--- a/app/src/main/res/layout/activity_resume_generation.xml
+++ b/app/src/main/res/layout/activity_resume_generation.xml
@@ -232,6 +232,7 @@
             android:id="@+id/spinnerTone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:entries="@array/tone_options"
             android:background="@drawable/spinner_background"
             android:padding="12dp" />
 
