--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="secondary">#03DAC6</color>
     <color name="success">#4CAF50</color> <!-- Material green -->
     <color name="secondary_variant">#018786</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorAccent">#FF4081</color>
 
     <!-- Background / Text -->
     <color name="background">#FFFFFF</color>
