--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,7 +138,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Announcements & Tips"
+            android:text="Announcements &amp; Tips"
             android:textColor="@color/text_primary"
             android:textSize="16sp"
             android:textStyle="bold" />
