--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,7 +118,8 @@
                 android:background="@drawable/bg_instructions_placeholder"
                 android:padding="16dp"
                 android:layout_marginBottom="16dp"
-                android:visibility="gone">
+                android:visibility="visible"    
+                //android:visibility="gone">
 
         <LinearLayout
                 android:layout_width="match_parent"
