--- a/app/src/main/res/layout/activity_resume_generation.xml
+++ b/app/src/main/res/layout/activity_resume_generation.xml
@@ -211,7 +211,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:background="@drawable/bg_upload_item"
-                android:padding="16px">
+                android:padding="16dp">
 
                 <TextView
                     android:layout_width="match_parent"
