--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -219,7 +219,7 @@
                     android:id="@+id/btn_buy_3_cv"
                     android:layout_width="match_parent"
                     android:layout_height="52dp"
-                    android:text="3 CV Credits - €5"
+                    android:text="3 CV Credits - €5 (Incl. VAT)"
                     android:textColor="@color/on_primary"
                     android:textSize="14sp"
                     android:backgroundTint="@color/modern_primary"
@@ -230,7 +230,7 @@
                     android:id="@+id/btn_buy_8_cv"
                     android:layout_width="match_parent"
                     android:layout_height="52dp"
-                    android:text="8 CV Credits - €10"
+                    android:text="8 CV Credits - €10 (Incl. VAT)"
                     android:textColor="@color/on_primary"
                     android:textSize="14sp"
                     android:backgroundTint="@color/modern_primary"
